src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Add_training_parameters_to_URL__c</fullName>
        <inlineHelpText>Enabling this option will pass context parameters to the External Resource URL. (e.g. https://someurl.com/?aid=ASSIGNMENT_ID&amp;tid=TPLAN_ID)</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Add training parameters to URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description for this task</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Image_Upload__c</fullName>
        <inlineHelpText>Enabling this option will require users to upload an image in order to complete the task</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Enable Image Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Resource_Name__c</fullName>
        <inlineHelpText>&quot;Friendly&quot; name for the External Resource URL. If blank, the External Resource URL will be displayed</inlineHelpText>
        <label>External Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Resource_Target__c</fullName>
        <inlineHelpText>Target window for displaying the External Resource URL. &quot;blank&quot; will open a new tab/window and &quot;self&quot; will use the current tab/window</inlineHelpText>
        <label>External Resource Target</label>
        <picklist>
            <picklistValues>
                <fullName>blank</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>self</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Resource_URL__c</fullName>
        <inlineHelpText>URL to an external resource that will guide users on how to complete the task</inlineHelpText>
        <label>External Resource URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>Learning__c</referenceTo>
        <relationshipLabel>Task</relationshipLabel>
        <relationshipName>Task</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Requires_Manager_Approval__c</fullName>
        <inlineHelpText>Enable this option if you want to require Manager&apos;s approval for completing the task. This option will use the standard Manager field in the User object</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Requires Manager Approval to Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Undo__c</fullName>
        <inlineHelpText>Enable this option if you do not want users to re-open a task marked as completed</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Disable Undo for Completed Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_RTA__c</fullName>
        <inlineHelpText>Use this field to provide an additional description for the task</inlineHelpText>
        <label>Additional Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disable_Comments__c</fullName>
        <inlineHelpText>Enable this option if you do not want users to provide comments for this task</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Disable Comments</label>
        <type>Checkbox</type>
    </fields>
    <label>Task</label>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>